# zaitoon

./: CMakeLists.txt  LICENSE  README.md
src/: zaitoon.c  zaitoon.h
test/: CTest.cmake  alpha.c  ellipse.c  line.c  rect.c  test.h  trig.c
test/record/: alpha.ppm  ellipse.ppm  line.ppm  record_check.c  rect.ppm  trig.ppm
